@@ -1,5 +1,5 @@
 <?php
-// $Id: taxonomy.test,v 1.42 2009-08-03 20:19:29 webchick Exp $
+// $Id: taxonomy.test,v 1.43 2009-08-04 06:50:07 webchick Exp $
 
 /**
  * @file
@@ -392,30 +392,6 @@ class TaxonomyTermTestCase extends TaxonomyWebTestCase {
     $this->admin_user = $this->drupalCreateUser(array('administer taxonomy', 'bypass node access'));
     $this->drupalLogin($this->admin_user);
     $this->vocabulary = $this->createVocabulary();
-  }
-
-  /**
-   * Test related terms.
-   */
-  function testTaxonomyTermRelations() {
-    // Create two taxonomy terms.
-    $term1 = $this->createTerm($this->vocabulary);
-    $term2 = $this->createTerm($this->vocabulary);
-
-    // Edit $term1 and add $term2 as a relationship.
-    $edit = array();
-    $edit['relations[]'] = $term2->tid;
-    $this->drupalPost('taxonomy/term/' . $term1->tid . '/edit', $edit, t('Save'));
-    $related = taxonomy_get_related($term1->tid);
-    $this->assertTrue(isset($related[$term2->tid]), t('Related term was found'));
-    // Create a third term.
-    $term3 = $this->createTerm($this->vocabulary);
-    $edit['relations[]'] = $term3->tid;
-    $this->drupalPost('taxonomy/term/' . $term1->tid . '/edit', $edit, t('Save'));
-
-    $related = taxonomy_get_related($term1->tid);
-    $this->assertTrue(isset($related[$term3->tid]), t('Related term was found'));
-    $this->assertFalse(isset($related[$term2->tid]), t('Term relationship no longer exists'));
   }
 
   /**
